@@ -5,6 +5,7 @@ Revision history for Perl extension Date::Convert::French_Rev.
         - fix a few typos in the feasts names (thank you Gérald)
         - add a few entries in the "SEE ALSO" chapter (thank you Gérald)
         - tidying up the documentation, for example replacing http:// by https:// whenever possible
+        - starting a deprecation process for the %L strftime specifier
 
 0.08  Tridi 23 Thermidor CCXXIII, jour de la lentille (Monday 2015-08-10,
       which, according to the Gregorian calendar, is the 223rd anniversary
